@@ -836,3 +836,4 @@ seen. gmtime warning still there
 - Modified updconf to reflect the except socks -> except scan change
 - Fixed a typo in the win32 makefile
 - Made the config a bit more sturdy (would have done more, but got boring :P)
+- Moved /svso and /svsnick to modules
